Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73232

When QColorDialog is moved from one display to another with different dpis it does not adjust correctly

XMLWordPrintable

    • 5557b6930405c38ba02bf5394de4ff42aa2b6181 (qt/qtbase/5.12)

      When QColorDialog is moved from one display to another with different dpis it does not adjust correctly. If it is moved from a 100% dpi to 200% dpi screen for instance then all the widgets are truncated inside the dialog as it has kept the same size it had on the 100% dpi screen.

      If it is moved in the other direction after starting on the 200% dpi screen then the window will end up with a lot of blank space

        1. qtbug73232.zip
          1 kB
        2. qtbug73232_log.txt
          3 kB
        3. qtbug73232_diag.diff
          2 kB
        4. qtbug73232.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes