QColorDialog: Remove flag Qt::MSWindowsFixedSizeDialogHint

The flag causes issues with High DPI scaling (the OS maintains
the size in device pixels when moving across screens).

It does not really make a difference (apart from the resize handle
appearing) since the dialog uses QLayout::SetFixedSize.

Fixes: QTBUG-73232
Change-Id: Iad08427796890582ac05758678d24e3cd707e669
Reviewed-by: Andy Shaw <andy.shaw@qt.io>